# reddragon-codescry-tui

./: .gitignore  .talismanrc  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: repos.example.json
src/retui/: __init__.py  app.py  app.tcss  cli.py
src/retui/facade/: analysis.py  red_dragon_api.py  types.py
src/retui/llm/: client.py  context.py
src/retui/rendering/: cfg_image.py  dot_utils.py
src/retui/screens/: chat_screen.py  dashboard.py  file_screen.py  function_screen.py  repo_screen.py
src/retui/session/: config.py  models.py  persistence.py
src/retui/widgets/: cfg_viewer.py  chat_pane.py  dataflow_viewer.py  execution_replay_viewer.py  integration_table.py  ir_viewer.py  repo_tree.py  status_bar.py  symbol_table.py  vm_state_viewer.py
tests/: test_facade.py  test_rendering.py  test_session.py
tests/unit/: test_analysis_facade.py  test_chat_screen.py  test_execution_replay_viewer.py  test_function_screen_cobol.py  test_llm_client.py
