[tool.poetry]
name = "rev-eng-tui"
version = "0.1.0"
description = "Top-down, read-only, multi-repo reverse engineering TUI"
authors = ["Aniket Gupta"]
license = "MIT"
packages = [{include = "retui", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
textual = ">=0.50"
pydantic = ">=2.12"
anthropic = ">=0.84"
cairosvg = ">=2.7"
rich-pixels = ">=3.0"
python-dotenv = "^1.2.1"
sentence-transformers = "^5.2.3"

[tool.poetry.group.ml.dependencies]
codescry = {git = "https://github.com/avishek-sen-gupta/codescry.git", branch = "main"}
red-dragon = {git = "https://github.com/avishek-sen-gupta/red-dragon.git", branch = "main"}

[tool.poetry.scripts]
retui = "retui.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
black = "^26.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
